--- a/ContosoPizza/Pages/PaymentMethods/Edit.cshtml
+++ b/ContosoPizza/Pages/PaymentMethods/Edit.cshtml
@@ -36,5 +36,39 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script>
+        $(document).ready(function () {
+            var errorMessage = '@Model.ErrorMessage';
+            if (errorMessage !== '') {
+                $('#errorModal').modal('show');
+            }
+            $('#errorModal .close').click(function () {
+                $('#errorModal').modal('hide');
+            });
+            $('#errorModal button[data-dismiss="modal"]').click(function () {
+                $('#errorModal').modal('hide');
+            });
+        });
+    </script>
 }
+<div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="errorModalLabel">Error</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                @Model.ErrorMessage
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
